--- a/2018/sass/main.scss
+++ b/2018/sass/main.scss
@@ -160,7 +160,7 @@ html, body {
 
 /* Christmas tree */
 
-.christmas-tree {
+.page-svg-content {
   display: flex;
   width: inherit;
   height: inherit;
